--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,10 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+# Xcode workspace and project settings
+*.xcworkspace/
+*.xcworkspacedata
+*.xccheckout
+*.xcuserstate
+xcshareddata/
